crates/dat0-ui/tests/snapshots/visual_snapshot__modal__crash-report.snap
---
source: crates/dat0-ui/tests/visual_snapshot.rs
expression: html
---
<div class="d0-scene" data-scene="modal/crash-report" style="width: 1440px; height: 900px; overflow: hidden">
<div class="d0-scrim" data-a11y-id="modal-scrim">
<div class="d0-modal" data-a11y-id="modal" role="dialog" aria-modal="true" aria-label="dat0 quit unexpectedly" tabindex="-1">
<div class="d0-modal-head">
<span class="d0-label">report</span>
<span class="d0-head-title">dat0 quit unexpectedly</span>
<button class="d0-btn is-ghost d0-modal-close" data-a11y-id="modal-close" role="button" aria-label="Close">✕</button>
</div>
<div class="d0-modal-body" data-a11y-id="modal-body">
<div class="d0-report" data-a11y-id="report">
<p class="d0-body" data-a11y-id="report-body" role="note" aria-label="dat0 closed unexpectedly last time. Send an anonymous crash report to help fix it? You can add a note below.">dat0 closed unexpectedly last time. Send an anonymous crash report to help fix it? You can add a note below.</p>
<textarea class="d0-field d0-report-note" data-a11y-id="report-note" aria-label="What were you doing? (optional)" placeholder="What were you doing? (optional)" rows="4" value="">
</textarea>
<div class="d0-report-actions">
<button class="d0-btn is-ghost" data-a11y-id="report-dismiss" role="button" aria-label="Cancel">Cancel</button>
<button class="d0-btn is-primary" data-a11y-id="report-send" role="button" aria-label="Send Report">Send Report</button>
</div>
</div>
</div>
</div>
</div>
</div>
