crates/dat0-ui/tests/snapshots/visual_snapshot__modal__live-refresh.snap
---
source: crates/dat0-ui/tests/visual_snapshot.rs
expression: html
---
<div class="d0-scene" data-scene="modal/live-refresh" style="width: 1440px; height: 900px; overflow: hidden">
<div class="d0-scrim" data-a11y-id="modal-scrim">
<div class="d0-modal" data-a11y-id="modal" role="dialog" aria-modal="true" aria-label="Refresh will discard edits" tabindex="-1">
<div class="d0-modal-head">
<span class="d0-label">refresh</span>
<span class="d0-head-title">Refresh will discard edits</span>
</div>
<div class="d0-modal-body" data-a11y-id="modal-body">
<div class="d0-confirm" data-a11y-id="live-refresh">
<p class="d0-body" data-a11y-id="live-refresh-body" role="note" aria-label="Re-importing discards 3 cell edit(s) and 1 row deletion(s). Filters, sorts, and column changes will be kept. Continue?">Re-importing discards 3 cell edit(s) and 1 row deletion(s). Filters, sorts, and column changes will be kept. Continue?</p>
<div class="d0-confirm-actions">
<button class="d0-btn is-ghost" data-a11y-id="live-refresh-cancel" role="button" aria-label="Cancel">Cancel</button>
<button class="d0-btn is-primary" data-a11y-id="live-refresh-confirm" role="button" aria-label="Refresh anyway">Refresh anyway</button>
</div>
</div>
</div>
</div>
</div>
</div>
