crates/dat0-ui/tests/snapshots/visual_snapshot__modal__name-prompt.snap
---
source: crates/dat0-ui/tests/visual_snapshot.rs
expression: html
---
<div class="d0-scene" data-scene="modal/name-prompt" style="width: 1440px; height: 900px; overflow: hidden">
<div class="d0-scrim" data-a11y-id="modal-scrim">
<div class="d0-modal" data-a11y-id="modal" role="dialog" aria-modal="true" aria-label="Save" tabindex="-1">
<div class="d0-modal-head">
<span class="d0-label">name</span>
<span class="d0-head-title">Save</span>
</div>
<div class="d0-modal-body" data-a11y-id="modal-body">
<div class="d0-prompt" data-a11y-id="name-prompt">
<label class="d0-label" for="name-prompt-field" data-a11y-id="name-prompt-title">Save</label>
<input id="name-prompt-field" class="d0-field" data-a11y-id="name-prompt-field" type="text" role="textbox" aria-label="Save" aria-invalid="false" placeholder="name" value="" data-autofocus="true"/>
<div class="d0-form-actions">
<button class="d0-btn is-primary" data-a11y-id="name-prompt-ok" role="button" aria-label="Save" disabled=true>Save</button>
<button class="d0-btn is-ghost" data-a11y-id="name-prompt-cancel" role="button" aria-label="Cancel">Cancel</button>
</div>
</div>
</div>
</div>
</div>
</div>
